--- a/integrations/bitrix24/config.json
+++ b/integrations/bitrix24/config.json
@@ -2,7 +2,7 @@
   "portal": "onlineturplus.bitrix24.ru",
   "webhook": "https://onlineturplus.bitrix24.ru/rest/1/2grdams84czxo5h8/",
   "user_id": "1",
-  "user_name": "Вардгес Арутюнян",
+  "user_name": "\u0412\u0430\u0440\u0434\u0433\u0435\u0441 \u0410\u0440\u0443\u0442\u044e\u043d\u044f\u043d",
   "admin": true,
   "timezone": "Europe/Moscow",
   "connected_at": "2026-02-06T23:29:00+03:00"
